refactor: remove currency from shared models
